--- a/templates/units/unit_detail.html
+++ b/templates/units/unit_detail.html
@@ -40,7 +40,7 @@
 {% endblock %}
 
 {% block content %}
-  <div class="row">
+  <div class="row" id="unit-details" data-unit-pk="{{ object.pk }}">
     <div class="col-lg-6">
       <div class="box box-solid box-info">
         <div class="box-header">
@@ -88,7 +88,7 @@
         </div>
       </div>
     </div>
-    <div class="col-lg-6"> {% include 'comments/comment_form.html' %}</div>
+    <div class="col-lg-6">{% include 'comments/comment_form_unit.html' with not_sockets="1" not_collapse="1" modal_id="unit-comments-modal" delete_modal_id="unit-comments-delete" %}</div>
 
     <div class="col-lg-6"> {% include 'units/description.html' %}</div>
   </div>
