--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -15,7 +15,7 @@
     <div class="nav-tabs-custom no-bottom-margin">
       <ul class="nav nav-tabs exp-nav" role="tablist">
         <li class="active"><a href="#exp-chat" role="tab" data-toggle="tab"><i class="fa fa-comments"></i> {% trans 'Discussion' %}</a></li>
-        <li class=""><a href="#exp-workfow" data-target="#exp-workfow" role="tab" data-toggle="tab"><i class="fa fa-edit"></i> {% trans 'Workflow' %}</a></li>
+        <li class="show-workflow"><a href="#workflow" data-target="#workflow" role="tab" data-toggle="tab"><i class="fa fa-edit"></i> {% trans 'Workflow' %}</a></li>
         <li class=""><a href="#unit-page" data-target="#unit-page" role="tab" data-toggle="tab"><i class="fa fa-cube"></i> {% trans 'Data' %}</a></li>
         <li class=""><a href="#exp-page" data-target="#exp-page" role="tab" data-toggle="tab"><i class="fa fa-eyedropper"></i> {% trans 'Details' %}</a></li>
       </ul>
@@ -34,16 +34,10 @@
             </div>
           </div>
         </div>
-        <div class="tab-pane" id="exp-workfow">
-          <div class="row">
-            <div class="col-lg-12">
-              <div style="overflow:hidden">
-                <iframe src="http://wooflo.magic60.ru/project/{{ object.wooflo_key}}" width="100%" height="100%">
-                  {% trans "Your browser doesn't support iframes" %}
-                </iframe>
-              </div>
-            </div>
-          </div>
+        <div class="tab-pane" id="workflow">
+          <script>
+            var wooflo_key = "{{ object.wooflo_key}}";
+          </script>
         </div>
         <div class="tab-pane" id="exp-page">
           <div class="row">
