Refactor unit api

--- a/templates/units/unit_list.html
+++ b/templates/units/unit_list.html
@@ -4,8 +4,8 @@
 
 {% block urls %}
   data-remove-url='{% url "units:delete" lab_pk=lab.pk %}'
-  data-content-url='{% url "units:api-list-table" lab_pk=lab.pk %}'
-  data-update-url='{% url "units:api-update-table" lab_pk=lab.pk %}'
+  data-content-url='{% url "units:api-table" lab_pk=lab.pk %}'
+  data-update-url='{% url "units:api-table" lab_pk=lab.pk %}'
 {% endblock %}
 
 {% block content %}
