--- a/templates/storages/index.html
+++ b/templates/storages/index.html
@@ -63,7 +63,7 @@
         <h3 class="box-title">{% trans "Storage list" %}</h3>
       </div>
       <div class="list-group">
-        <div ng-repeat="storage in storages" class="storage">
+        <div ng-repeat="storage in storages" class="storage" ng-class="{error: storage.active==false}">
             <span class="list-group-item list-group-item-sm"><span ng-bind="storage.fullname"></span>
               <span class="pull-right">
               <a href="#" ng-click="setStorage(storage)"><i class="fa fa-edit"></i></a>
