Simplify model permissions

--- a/templates/handsontable.html
+++ b/templates/handsontable.html
@@ -35,7 +35,7 @@
 
 
 {% block manage_buttons %}
-  {% if is_member %}
+  {% if is_editor %}
     <div class="btn-group">
       <button id="save" class="btn bg-olive"><i class="fa fa-save"></i> {% trans 'Save' %}</button>
     </div>
