--- a/templates/handsontable_measurment.html
+++ b/templates/handsontable_measurment.html
@@ -36,7 +36,7 @@
 
 
 {% block manage_buttons %}
-  {% if is_member %}
+  {% if is_editor %}
     <div class="btn-group">
       <button ng-click="saveTable()" class="btn bg-olive"><i class="fa fa-save"></i> {% trans 'Save' %}</button>
     </div>
