--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -105,7 +105,7 @@
                         </ul>
                       </div>
                       <div class="col-sm-9">
-                        {% if is_member or is_owner %}
+                        {% if is_editor %}
                           <div class="btn-group">
                             <a href="{% url 'experiments:update' pk=object.pk lab_pk=object.lab.pk %}" class="btn btn-info btn-sm btn-flat">
                               <i class="fa fa-edit"></i> {% trans 'edit'|upper %}
