--- a/templates/units/description.html
+++ b/templates/units/description.html
@@ -8,7 +8,7 @@
     <div class="tab-content">
       <div class="tab-pane active" id="description">
         <div class="description-show">
-          {% if is_owner or is_member %}
+          {% if is_editor %}
             <button class="description-edit fa fa-pencil btn-link pull-right" title="{% trans 'Edit' %}"></button>
           {% endif %}
           {{ object.description|default:' '|safe }}
